--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-sliding-pane": "^7.1.0",
     "react-toastify": "^9.0.4",
     "sass": "^1.52.3",
     "typescript": "^4.4.2",
