--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "crypto-js": "^4.1.1",
     "dexie": "^3.2.2",
     "react": "^18.1.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "@types/pbkdf2": "^3.1.0"
+    "@types/pbkdf2": "^3.1.0",
+    "@types/react-datepicker": "^4.4.2"
   }
 }
