--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,7 +18,7 @@
             "sizes": "512x512"
         }
     ],
-    "start_url": ".",
+    "start_url": "/home",
     "display": "standalone",
     "theme_color": "#8886ff",
     "background_color": "#ffffff"
